tests/cases/borrowing/errors/named-borrow-reassign.ari
fn main() -> i64 {
  var number = 7;
  var other = 8;
  var shared = ref number;
  shared = ref other;
  return 0;
}
